--- a/templates/index.html
+++ b/templates/index.html
@@ -276,9 +276,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <button type="submit" class="btn btn-primary">Submit Apply</button>
 </form>
 </fieldset>
+        {% block alert %}
 
-			</div>
-		</div>
+        {% endblock %}
+
+
 <!-- //banner-bottom -->
 <!-- carousal-plugin -->
 <script src="{% static 'js/jquery.film_roll.js' %}"></script>
