change urls file

--- a/templates/index.html
+++ b/templates/index.html
@@ -184,7 +184,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			<div class="form-group col-md-6">
 				<label for="inputemail" class="col-form-label">E-mail</label>
-				<input type="tel"  class="form-control" required="" id="inputemail" placeholder="E-mail" name="email">
+				<input type="email"  class="form-control" required="" id="inputemail" placeholder="E-mail" name="email">
 			</div>
 
 </div>
