effect changes by abdullahi

--- a/templates/index.html
+++ b/templates/index.html
@@ -273,7 +273,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 
 </div>
-<button type="submit" class="btn btn-primary">Submit Apply</button>
+<button type="submit" class="btn btn-primary">Submit Application</button>
 </form>
 </fieldset>
         {% block alert %}
@@ -404,7 +404,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<li><a href="#mail" class="scroll">Mail Us</a></li>
 			</ul>
 			<div class="copy-right">
-				<p>© 2017 Atiku Cares Foundation. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+				<p>© 2017 Atiku Cares Foundation. All rights reserved | Design by <a href="#">Garbaba Technologies</a></p>
 			</div>
 		</div>
 	</div>
