--- a/templates/home v3.html
+++ b/templates/home v3.html
@@ -262,7 +262,7 @@
                 <div class="row ">
                         {% for state in states %}
                     <!--First column-->
-                    <div class="col-md-4 mb-3 ms-2 view overlay hm-blue-strong hoverable">
+                    <div class="col-md-4 colmb-3 ms-2 view overlay hm-blue-strong hoverable">
                         <!--Card-->
                         <div class="card card-cascade cascading-admin-card">
 
@@ -271,7 +271,7 @@
                                 <i class="fa fa-money blue darken-3"></i>
                                 <div class="data">
                                     <p class="font-weight-bold"> {{ state.name }} State</p>
-                                    <h3>Number Of participants will appear here</h4>
+                                    <h3>100</h4>
                                 </div>
                             </div>
                             <!--/.Card Data-->
