--- a/templates/home v3.html
+++ b/templates/home v3.html
@@ -262,7 +262,7 @@
                 <div class="row ">
                         {% for state in states %}
                     <!--First column-->
-                    <div class="col-md-4 colmb-3 ms-2 view overlay hm-blue-strong hoverable">
+                    <div class="col-md-4 col mb-2 view overlay hm-blue-strong hoverable">
                         <!--Card-->
                         <div class="card card-cascade cascading-admin-card">
 
