--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container-fluid">
 			<div class="w3_agile_header">
 				<div class="agile_logo">
-					<img src="{% static 'images/logo.jpg' %}" alt=" " class="img-responsive">
+					<img src="{% static 'images/logo.png' %}" alt=" " class="img-responsive">
 				</div>
 				<div class="clearfix"> </div>
 				<div class="w3_agileits_nav">
