--- a/templates/localgovernments.html
+++ b/templates/localgovernments.html
@@ -253,8 +253,8 @@
         <div class="container-fluid">
 
             <!--Section heading-->
-            <h4 class="text-left font-weight-bold">Participants Summary By State</h4>
-            <p class="font-italic">Please Click On State For More Details  </p>
+            <h4 class="text-left font-weight-bold">Participants Summary By Local Government</h4>
+            <p class="font-italic">Please Click On Local Government For More Details  </p>
             <hr>
             <br>
 
